# imgui_opengl_linear_algebra_cmake_starter

./: .gitignore.txt  .gitmodules  CMakeLists.txt  README.md
cmake/: PROJECTConfigure.h.in  build_doc.cmake  display_project_informations.cmake  display_system_informations.cmake
doc/: CMakeLists.txt  Doxyfile
include/app/: app.h  app_base.h  window_base.h
include/app/file_browser/: imfilebrowser.h
include/app/imgui_utils/: notification.h  table_utils.h  ui_utils.h
include/app/node_system/: link.h  node_editor.h  nodes.h
include/fstreamlib/: csv.h  segy.h
include/glgraph/: glgraph_demo.h  scatter3d.h
include/glgraph/devicesio/: camera.h  keyboard.h  mouse.h
include/glgraph/rendering/: programs.h  shader.h
include/timer/: timer.h
include/utils/: path.h  printer.h  strings.h
mains/: CMakeLists.txt  imgui_main.cpp
scripts/: build_debug.sh  build_release.sh  configure.sh  configure_n_build_debug.sh  configure_n_build_release.sh
shaders/: shader.hpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cpp  app_base.cpp  window_base.cpp
src/app/imgui_utils/: notification.cpp  table_utils.cpp  ui_utils.cpp
src/app/node_system/: link.cpp  node_editor.cpp  nodes.cpp
src/fstreamlib/: CMakeLists.txt  csv.cpp
src/glgraph/: CMakeLists.txt  glgraph.cpp  glgraph_demo.cpp  scatter3d.cpp
src/glgraph/devicesio/: camera.cpp  keyboard.cpp  mouse.cpp
src/glgraph/rendering/: shader.cpp
src/timer/: CMakeLists.txt  timer.cpp
src/utils/: CMakeLists.txt  path.cpp  printer.cpp  strings.cpp
tests/: CMakeLists.txt
tests/app/: CMakeLists.txt  app_test.cpp
tests/dependencies/: CMakeLists.txt  eigen_test.cpp  glew_glfw_test.cpp  glfw_test.cpp  glm_test.cpp  imgui_test.cpp
tests/fstreamlib/: CMakeLists.txt  csv_test.cpp  test_csv.csv  test_csv_2.csv
tests/glgraph/: CMakeLists.txt  glgraph_test.cpp
tests/timer/: CMakeLists.txt  timer_test.cpp
tests/utils/: CMakeLists.txt  utils_str_test.cpp
